updated the IM Service name as im-server

--- a/forwardinc/appsrv/data/environment.properties
+++ b/forwardinc/appsrv/data/environment.properties
@@ -66,7 +66,7 @@ ca.dir.ldif=NeteAuto.ldif
 ca.dir.domain=dc=ForwardInc,dc=ca
 
 #Provide base URL
-iam.framework.basehost=ime-01
+iam.framework.basehost=im-server
 
 #CA Provisioning Server Hostname
 ca.prov.dir.hostname=imps-01
