Modification done as per the reduced images

--- a/forwardinc/jcs/data/jcs_external.properties
+++ b/forwardinc/jcs/data/jcs_external.properties
@@ -68,7 +68,7 @@ jcs_fips_enabled=false
 # JMS Configuration Properties
 #		(<jcsroot>/conf/override/server_common.properties)
 # ****************************************************************************
-jcs_jmsCredentials_password={AES}Qq1ODJh6BhmfTFMYNGQrJQ\=\=
+jcs_jmsCredentials_password={AES}Qq1ODJh6BhmfTFMYNGQrJQ==
 
 # ****************************************************************************
 # UI Configuration Properties
