--- a/forwardinc/mysql/data/my.cnf
+++ b/forwardinc/mysql/data/my.cnf
@@ -128,22 +128,22 @@ bind-address=0.0.0.0
 #binlog_format=mixed
 
 # Uncomment the following if you are using InnoDB tables
-innodb_data_home_dir = /usr/local/mysql/data
-innodb_data_file_path = ibdata1:2000M;ibdata2:10M:autoextend
-innodb_log_group_home_dir = /usr/local/mysql/logs/innodb
+#innodb_data_home_dir = /usr/local/mysql/data
+#innodb_data_file_path = ibdata1:2000M;ibdata2:10M:autoextend
+#innodb_log_group_home_dir = /usr/local/mysql/logs/innodb
 # You can set .._buffer_pool_size up to 50 - 80 %
 # of RAM but beware of setting memory usage too high
-innodb_buffer_pool_size = 384M
+#innodb_buffer_pool_size = 384M
 # Deprecated in 5.6 --> innodb_additional_mem_pool_size = 20M
 # Set .._log_file_size to 25 % of buffer pool size
-innodb_log_file_size = 100M
-innodb_log_buffer_size = 8M
-innodb_flush_log_at_trx_commit = 1
-innodb_lock_wait_timeout = 50
+#innodb_log_file_size = 100M
+#innodb_log_buffer_size = 8M
+#innodb_flush_log_at_trx_commit = 1
+#innodb_lock_wait_timeout = 50
 
 # jonda15 - Added the innodb_file_format and innodb_large_prefix to get arround maximum index key length issue in 5.6
-innodb_file_format = BARRACUDA
-innodb_large_prefix = ON
+#innodb_file_format = BARRACUDA
+#innodb_large_prefix = ON
 
 [mysqldump]
 quick
